fixing chapter 1 and url path

--- a/slides/chapter1_01_Install.Rmd
+++ b/slides/chapter1_01_Install.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(fig.path = "chapter1/chapter1-01/",
                       echo = TRUE)
 # Allow knitr::include_graphics to point to missing files
 options("knitr.graphics.error" = FALSE)
+
 ```
 
 ### Why do we want to learn and use R and RStudio?
@@ -52,7 +53,9 @@ One way to think about the relationship between R and RStudio is that R acts lik
 knitr::include_graphics("chapter1/chapter1-01/R_Install_CRAN.png")
 ```
 
-Note: Download the latest version of R from: [The Comprehensive R Archive Network (CRAN)](https://cloud.r-project.org/).
+Notess: 
+
+Download the latest version of R from The Comprehensive R Archive Network (CRAN): <https://cloud.r-project.org/>.
 
 Please select Download R for `your operating system`
 
@@ -65,7 +68,9 @@ knitr::include_graphics("chapter1/chapter1-01/R_Install_Mac.png")
 ```
 
   
-Note: You should see this webpage once you click on `Download R for macOS`.  
+Notess: 
+
+You should see this webpage once you click on `Download R for macOS`.  
 
 Click on `R-4.1.2.pkg` to start the download. (The top one will always be the most recent version. During the first development of this short course, 4.1.2 is the latest version of R.)
 
@@ -78,7 +83,9 @@ Click on `R-4.1.2.pkg` to start the download. (The top one will always be the mo
 knitr::include_graphics("chapter1/chapter1-01/R_Install_Mac_1.png")
 ```
 
-Note: After finishing the download of `R-4.1.2.pkg`, double click on it, you should see the message below.
+Notes: 
+
+After finishing the download of `R-4.1.2.pkg`, double click on it, you should see the message below.
 
 Click `Continue`. 
 
@@ -87,12 +94,13 @@ Click `Continue`.
 ### macOS users 
 
 
-
 ```{r, echo=FALSE}
 knitr::include_graphics("chapter1/chapter1-01/R_Install_Mac_2.png")
 ```
 
-Note: Read through the important information about R. 
+Notes: 
+
+Read through the important information about R. 
 
 Click `Continue`.
 
@@ -105,7 +113,9 @@ Click `Continue`.
 knitr::include_graphics("chapter1/chapter1-01/R_Install_Mac_3.png")
 ```
 
-Note: Read through the software licence agreement about R. 
+Notes: 
+
+Read through the software licence agreement about R. 
 
 Click `Continue`.
 
@@ -118,7 +128,9 @@ Click `Continue`.
 knitr::include_graphics("chapter1/chapter1-01/R_Install_Mac_4.png")
 ```
 
-Note: The default installation location for macOS is the `Macintosh HD`.
+Notes: 
+
+The default installation location for macOS is the `Macintosh HD`.
 
 If you want to change the install location, click `Change Install Location`. Otherwise, click `Install`.
 
@@ -130,7 +142,9 @@ If you want to change the install location, click `Change Install Location`. Oth
 knitr::include_graphics("chapter1/chapter1-01/R_Install_Mac_5.png")
 ```
 
-Note: Once you successfully installed R. You can click `Close` to exit the installation process. 
+Notes: 
+
+Once you successfully installed R. You can click `Close` to exit the installation process. 
 
 ---
 
@@ -141,7 +155,9 @@ Note: Once you successfully installed R. You can click `Close` to exit the insta
 knitr::include_graphics("chapter1/chapter1-01/RStudio_Install.png")
 ```
 
-Note: Download the latest version of RStudio from [RStudio](https://www.rstudio.com/products/rstudio/download/). 
+Notes: 
+
+Download the latest version of RStudio from: <https://www.rstudio.com/products/rstudio/download/>. 
 
 Scroll down to `All Installers` and download the RStudio version for your operating system. 
 
@@ -155,7 +171,9 @@ Scroll down to `All Installers` and download the RStudio version for your operat
 knitr::include_graphics("chapter1/chapter1-01/RStudio_Install_Mac_1.png")
 ```
 
-Note: Drag RStudio.app into the `Applications` folder.
+Notes: 
+
+Drag RStudio.app into the `Applications` folder.
 
 After this step, you should have RStudio ready to explore!  
 
