--- a/slides/chapter1_01_windows.Rmd
+++ b/slides/chapter1_01_windows.Rmd
@@ -59,7 +59,9 @@ Please select Download R for `your operating system`
 
 ![Install R windows](chapter1/cran_windows_2.png)
   
-Note: Select base distribution binaries.
+Notes: 
+
+Select base distribution binaries.
 
 
 ---
@@ -68,7 +70,9 @@ Note: Select base distribution binaries.
 
 ![Install R windows](chapter1/cran_windows_3.png)
   
-Note: Download the latest version of R for Windows.
+Notes: 
+
+Download the latest version of R for Windows.
 
 ---
 
@@ -76,7 +80,9 @@ Note: Download the latest version of R for Windows.
 
 ![Install R windows](chapter1/cran_windows_4.png)
   
-Note: Run the downloaded executable file.
+Notes: 
+
+Run the downloaded executable file.
 
 
 ---
@@ -85,7 +91,9 @@ Note: Run the downloaded executable file.
 
 ![Install R windows](chapter1/cran_windows_5.png)
   
-Note: Allow the installer to change your device.
+Notes: 
+
+Allow the installer to change your device.
 
 
 ---
@@ -94,7 +102,9 @@ Note: Allow the installer to change your device.
 
 ![Install R windows](chapter1/cran_windows_6.png)
   
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 
 ---
@@ -103,7 +113,9 @@ Note: Follow the prompts.
 
 ![Install R windows](chapter1/cran_windows_7.png)
   
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 
 ---
@@ -112,7 +124,9 @@ Note: Follow the prompts.
 
 ![Install R windows](chapter1/cran_windows_8.png)
   
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 
 ---
@@ -121,7 +135,9 @@ Note: Follow the prompts.
 
 ![Install R windows](chapter1/cran_windows_9.png)
   
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 
 ---
@@ -130,7 +146,9 @@ Note: Follow the prompts.
 
 ![Install R windows](chapter1/cran_windows_10.png)
   
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 
 ---
@@ -139,7 +157,9 @@ Note: Follow the prompts.
 
 ![Install R windows](chapter1/cran_windows_11.png)
   
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 
 ---
@@ -148,7 +168,9 @@ Note: Follow the prompts.
 
 ![Install R windows](chapter1/cran_windows_12.png)
   
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 ---
 
@@ -156,7 +178,9 @@ Note: Follow the prompts.
 
 ![Install RStudio windows](chapter1/rstudio_windows_1.png)
 
-Note: Download the latest version of RStudio from [RStudio](https://www.rstudio.com/products/rstudio/download/). 
+Notes: 
+
+Download the latest version of RStudio from [RStudio](https://www.rstudio.com/products/rstudio/download/). 
 
 Scroll down to `All Installers` and download the RStudio version for your operating system. 
 
@@ -166,7 +190,9 @@ Scroll down to `All Installers` and download the RStudio version for your operat
 
 ![Install RStudio windows](chapter1/rstudio_windows_2.png)
 
-Note: Save the installer on your computer
+Notes: 
+
+Save the installer on your computer
 
 ---
 
@@ -174,7 +200,9 @@ Note: Save the installer on your computer
 
 ![Install RStudio windows](chapter1/rstudio_windows_3.png)
 
-Note: Run the executable file to install RStudio
+Notes: 
+
+Run the executable file to install RStudio
 
 
 ---
@@ -183,7 +211,9 @@ Note: Run the executable file to install RStudio
 
 ![Install RStudio windows](chapter1/rstudio_windows_4.png)
 
-Note: Allow the installer to make changes on your computer.
+Notes: 
+
+Allow the installer to make changes on your computer.
 
 ---
 
@@ -191,7 +221,9 @@ Note: Allow the installer to make changes on your computer.
 
 ![Install RStudio windows](chapter1/rstudio_windows_5.png)
 
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 ---
 
@@ -199,7 +231,9 @@ Note: Follow the prompts.
 
 ![Install RStudio windows](chapter1/rstudio_windows_6.png)
 
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 ---
 
@@ -207,7 +241,9 @@ Note: Follow the prompts.
 
 ![Install RStudio windows](chapter1/rstudio_windows_7.png)
 
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 ---
 
@@ -215,7 +251,9 @@ Note: Follow the prompts.
 
 ![Install RStudio windows](chapter1/rstudio_windows_8.png)
 
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 ---
 
@@ -223,7 +261,9 @@ Note: Follow the prompts.
 
 ![Install RStudio windows](chapter1/rstudio_windows_9.png)
 
-Note: Follow the prompts.
+Notes: 
+
+Follow the prompts.
 
 ---
 
@@ -231,7 +271,9 @@ Note: Follow the prompts.
 
 ![Open RStudio windows](chapter1/rstudio_windows_10.png)
 
-Note: Search for RStudio on your computer, and open it.
+Notes: 
+
+Search for RStudio on your computer, and open it.
 
 ---
 
@@ -239,4 +281,6 @@ Note: Search for RStudio on your computer, and open it.
 
 ![RStudio on windows](chapter1/rstudio_windows_11.png)
 
-Note: Time to learn R!
+Notes: 
+
+Time to learn R!
